Fixes get involved collapsing on safari

--- a/src/pages/GetInvolvedPage/GetInvolvedTypes.scss
+++ b/src/pages/GetInvolvedPage/GetInvolvedTypes.scss
@@ -110,6 +110,8 @@
   }
 
   @include breakpoint($small-breakpoint) {
+    flex: 0 1 auto;
+
     &:hover {
       transform: none;
     }
